vemo-app/main/default/objects/StudentProgram__c/fields/SendFullyFunded__c.field-meta.xml
<CustomField>
    <fullName>SendFullyFunded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>when this field is checked the system will generate the Fully Funded notification</inlineHelpText>
    <label>Send Fully Funded</label>
    <type>Checkbox</type>
</CustomField>