vemo-app/main/default/objects/StudentProgram__c/fields/SendNotCertified__c.field-meta.xml
<CustomField>
    <fullName>SendNotCertified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(System Field) When this field is checked the system will send the "Cancelled by School" email template.</inlineHelpText>
    <label>Send Not Certified</label>
    <type>Checkbox</type>
</CustomField>