vemo-app/main/default/objects/StudentProgram__c/fields/SendSchoolInitPreCertifiedInvite__c.field-meta.xml
<CustomField>
    <fullName>SendSchoolInitPreCertifiedInvite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked the system will generate the All Schools School Initiated Invitation</description>
    <inlineHelpText>If this field is checked the system will generate the All Schools School Initiated Invitation</inlineHelpText>
    <label>Send School Init Pre-Certified Invite</label>
    <type>Checkbox</type>
</CustomField>