vemo-app/main/default/objects/StudentProgram__c/fields/Servicing__c.field-meta.xml
<CustomField>
    <fullName>Servicing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flag that indicates that an agreement is in servicing. This is set automatically when current date hits Servicing Start Date or can be set manually. Flag used for other jobs, reports, and the portal to determine if an agreement is in servicing status.</inlineHelpText>
    <label>Servicing</label>
    <type>Checkbox</type>
</CustomField>