vemo-app/main/default/objects/StudentProgram__c/fields/ServicingStartDate__c.field-meta.xml
<CustomField>
    <fullName>ServicingStartDate__c</fullName>
    <inlineHelpText>Date that agreement starts servicing. Set by servicing team. Automated jobs look at this date to automatically check the servicing checkbox.</inlineHelpText>
    <label>Servicing Start Date</label>
    <type>Date</type>
</CustomField>