vemo-app/main/default/objects/StudentProgram__c/fields/SetRTCDates__c.field-meta.xml
<CustomField>
    <fullName>SetRTCDates__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(System Field) When this field is checked the system will automatically calculate and set the Right to Cancel Dates based upon the current disbursements on the Student Program.</inlineHelpText>
    <label>Set RTC Dates</label>
    <type>Checkbox</type>
</CustomField>