vemo-app/main/default/objects/StudentProgram__c/fields/SignedAgreementCleanURL__c.field-meta.xml
<CustomField>
    <fullName>SignedAgreementCleanURL__c</fullName>
    <formula>IF(!ISBLANK(SignedAgreementID__c ), $Setup.GlobalSettings__c.AttachmentDownloadPrefix__c &amp; SignedAgreementID__c , "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click this link to view the PDF of the signed Agreement.</inlineHelpText>
    <label>Signed Agreement CleanURL</label>
    <type>Text</type>
</CustomField>