vemo-app/main/default/objects/StudentProgram__c/fields/SignedAgreementID__c.field-meta.xml
<CustomField>
    <fullName>SignedAgreementID__c</fullName>
    <inlineHelpText>Used by the system to construct the above Signed Agreement Clean URL.</inlineHelpText>
    <label>Signed AgreementID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>