vemo-app/main/default/objects/StudentProgram__c/fields/StateOfResidenceCertification__c.field-meta.xml
<CustomField>
    <fullName>StateOfResidenceCertification__c</fullName>
    <inlineHelpText>(Certification) fields are only used for student initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>State of Residence (Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>