vemo-app/main/default/objects/StudentProgram__c/fields/StateOfResidencePostCertification__c.field-meta.xml
<CustomField>
    <fullName>StateOfResidencePostCertification__c</fullName>
    <inlineHelpText>(Post-Certification) fields store the final values entered by the School Admin during certification.</inlineHelpText>
    <label>State of Residence (Post-Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>