vemo-app/main/default/objects/StudentProgram__c/fields/StateOfResidencePreCertification__c.field-meta.xml
<CustomField>
    <fullName>StateOfResidencePreCertification__c</fullName>
    <inlineHelpText>(Pre-Certification) fields are only used for school initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>State of Residence (Pre-Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>