vemo-app/main/default/objects/StudentProgram__c/fields/StateOfResidenceStudent__c.field-meta.xml
<CustomField>
    <fullName>StateOfResidenceStudent__c</fullName>
    <inlineHelpText>(Student) fields store the values entered by the Student during application/registration.</inlineHelpText>
    <label>State of Residence (Student)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>