vemo-app/main/default/objects/StudentProgram__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Current status in the life-cycle of the Student Program</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AgreementStatus</valueSetName>
    </valueSet>
</CustomField>