vemo-app/main/default/objects/StudentProgram__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <inlineHelpText>Student related to this Student Program.</inlineHelpText>
    <label>Student</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be associated with a student</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Student</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Student Programs</relationshipLabel>
    <relationshipName>Student_Programs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>