vemo-app/main/default/objects/StudentProgram__c/fields/StudentChangesPendingApproval__c.field-meta.xml
<CustomField>
    <fullName>StudentChangesPendingApproval__c</fullName>
    <formula>ISPICKVAL(Student__r.PersonContact.RecordStatus__c, "Pending Approval")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Changes Pending Approval</label>
    <type>Checkbox</type>
</CustomField>