vemo-app/main/default/objects/StudentProgram__c/fields/StudentPortalLink__c.field-meta.xml
<CustomField>
    <fullName>StudentPortalLink__c</fullName>
    <formula>Program__r.StudentPortalLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>URL of school-branded entry point to the customer portal.</inlineHelpText>
    <label>Student Portal Link</label>
    <type>Text</type>
</CustomField>