vemo-app/main/default/objects/StudentProgram__c/fields/StudentVemoAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>StudentVemoAccountNumber__c</fullName>
    <formula>Student__r.VemoAccountNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatially generated number identifying the Student/Account. It is independent of any particular system (Salesforce, Auth0, CampusDoor, ATOM1, etc) and can be given to customers.</inlineHelpText>
    <label>Student Vemo Account Number</label>
    <type>Text</type>
</CustomField>