vemo-app/main/default/objects/StudentProgram__c/fields/SubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedDate__c</fullName>
    <inlineHelpText>The date the student submitted the application/registration.</inlineHelpText>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>