vemo-app/main/default/objects/StudentProgram__c/fields/VemoContractNumber__c.field-meta.xml
<CustomField>
    <fullName>VemoContractNumber__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <inlineHelpText>Automatically generated number identifying the Contract/Student Program. It is independent of any particular system (Salesforce, Auth0, CampusDoor, ATOM1, etc) and can be given to customers.</inlineHelpText>
    <label>Vemo Contract Number</label>
    <type>AutoNumber</type>
</CustomField>