vemo-app/main/default/objects/StudentProgram__c/fields/X30DaysInFuture__c.field-meta.xml
<CustomField>
    <fullName>X30DaysInFuture__c</fullName>
    <formula>Today()+30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>30 days from today. Updated each day.</inlineHelpText>
    <label>30 Days in Future</label>
    <type>Date</type>
</CustomField>