vemo-app/main/default/objects/StudentProgram__c/validationRules/PendingStudentChangesCannotBeCertified.validationRule-meta.xml
<ValidationRule>
    <fullName>PendingStudentChangesCannotBeCertified</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  StudentChangesPendingApproval__c &amp;&amp;  ISPICKVAL(  Status__c  , "Certified")  ,true , false)</errorConditionFormula>
    <errorMessage>This student has pending changes on their account record that must be approved prior to certification</errorMessage>
</ValidationRule>