vemo-app/main/default/objects/StudentProgram__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>VemoContractNumber__c</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Program__c</columns>
    <columns>ProgramName__c</columns>
    <columns>Status__c</columns>
    <columns>ApplicationStartDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>