vemo-app/main/default/objects/StudentProgram__c/listViews/Applications_in_Process_Week.listView-meta.xml
<ListView>
    <fullName>Applications_in_Process_Week</fullName>
    <columns>VemoContractNumber__c</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>ProgramName__c</columns>
    <columns>Status__c</columns>
    <columns>ApplicationStartDate__c</columns>
    <columns>ApplicationStartAge__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Fully Funded,Cancelled,School,Leave of Absence,Internship</value>
    </filters>
    <filters>
        <field>ApplicationStartAge__c</field>
        <operation>lessOrEqual</operation>
        <value>7</value>
    </filters>
    <filters>
        <field>Servicing__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Applications in Process - Week</label>
</ListView>