vemo-app/main/default/objects/StudentProgram__c/listViews/Cancelled_Applications.listView-meta.xml
<ListView>
    <fullName>Cancelled_Applications</fullName>
    <columns>VemoContractNumber__c</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Program__c</columns>
    <columns>CustomerWithdrawnReason__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>CurrentStatusDate__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:120</value>
    </filters>
    <filters>
        <field>CancellationReason__c</field>
        <operation>equals</operation>
        <value>Customer Withdrawn</value>
    </filters>
    <label>Cancelled Applications</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>