vemo-app/main/default/objects/StudentProgram__c/listViews/Certified_Applications.listView-meta.xml
<ListView>
    <fullName>Certified_Applications</fullName>
    <columns>VemoContractNumber__c</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Program__c</columns>
    <columns>ProgramName__c</columns>
    <columns>FundingAmountCertification__c</columns>
    <columns>IncomeShareCertification__c</columns>
    <columns>PaymentTermCertification__c</columns>
    <columns>PaymentCapCertification__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Certified</value>
    </filters>
    <label>Certified Applications</label>
</ListView>