vemo-app/main/default/objects/StudentProgram__c/listViews/Credit_Review.listView-meta.xml
<ListView>
    <fullName>Credit_Review</fullName>
    <columns>VemoContractNumber__c</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Program__c</columns>
    <columns>ProgramName__c</columns>
    <columns>FundingAmountStudent__c</columns>
    <columns>IncomeShareStudent__c</columns>
    <columns>PaymentTermStudent__c</columns>
    <columns>PaymentCapStudent__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreditCheckProcess__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Credit Review</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>