vemo-app/main/default/objects/StudentProgram__c/listViews/Incomplete_Applications.listView-meta.xml
<ListView>
    <fullName>Incomplete_Applications</fullName>
    <columns>VemoContractNumber__c</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Program__c</columns>
    <columns>ProgramName__c</columns>
    <columns>Status__c</columns>
    <columns>ApplicationStartDate__c</columns>
    <columns>ApplicationStartAge__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Application Incomplete,Application Under Review</value>
    </filters>
    <label>Incomplete Applications</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>