vemo-app/main/default/objects/StudentProgram__c/listViews/Incomplete_Applications_TEST.listView-meta.xml
<ListView>
    <fullName>Incomplete_Applications_TEST</fullName>
    <columns>VemoContractNumber__c</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Program__c</columns>
    <columns>Status__c</columns>
    <columns>ApplicationStartDate__c</columns>
    <columns>ApplicationStartAge__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Fully Funded,Grace,Deferment,Payment</value>
    </filters>
    <filters>
        <field>ApplicationStartDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>4/1/2017 12:00 AM</value>
    </filters>
    <label>Incomplete Applications TEST</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>