vemo-app/main/default/objects/StudentProgram__c/listViews/Pending_Disbursement.listView-meta.xml
<ListView>
    <fullName>Pending_Disbursement</fullName>
    <columns>VemoContractNumber__c</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Program__c</columns>
    <columns>ProgramName__c</columns>
    <columns>Status__c</columns>
    <columns>FundingAmountPostCertification__c</columns>
    <columns>IncomeSharePostCertification__c</columns>
    <columns>PaymentTermPostCertification__c</columns>
    <columns>PaymentCapPostCertification__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Certified,Partially Funded</value>
    </filters>
    <label>Pending Disbursement</label>
</ListView>