vemo-app/main/default/objects/StudentProgram__c/listViews/Status_Application_Complete.listView-meta.xml
<ListView>
    <fullName>Status_Application_Complete</fullName>
    <columns>VemoContractNumber__c</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Program__c</columns>
    <columns>SubmittedDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Application Complete</value>
    </filters>
    <label>Status | Application Complete</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>