vemo-app/main/default/objects/StudentProgram__c/listViews/Status_Application_Under_Review.listView-meta.xml
<ListView>
    <fullName>Status_Application_Under_Review</fullName>
    <columns>VemoContractNumber__c</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Program__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Application Under Review</value>
    </filters>
    <filters>
        <field>ApplicationStartDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>4/1/2017 12:00 AM</value>
    </filters>
    <label>Status | Application Under Review</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>