vemo-app/main/default/objects/StudentProgram__c/listViews/Status_Cancelled.listView-meta.xml
<ListView>
    <fullName>Status_Cancelled</fullName>
    <columns>VemoContractNumber__c</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Program__c</columns>
    <columns>CancellationReason__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Status | Cancelled</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>